internal/gatewayapi/testdata/backendtrafficpolicy-with-ratelimit-both-type.in.yaml
gateways:
- apiVersion: gateway.networking.k8s.io/v1
  kind: Gateway
  metadata:
    namespace: envoy-gateway
    name: gateway-1
  spec:
    gatewayClassName: envoy-gateway-class
    listeners:
    - name: http
      protocol: HTTP
      port: 80
      allowedRoutes:
        namespaces:
          from: All
grpcRoutes:
- apiVersion: gateway.networking.k8s.io/v1alpha2
  kind: GRPCRoute
  metadata:
    namespace: default
    name: grpcroute-1
  spec:
    parentRefs:
    - namespace: envoy-gateway
      name: gateway-1
      sectionName: http
    rules:
    - backendRefs:
      - name: service-1
        port: 8080
backendTrafficPolicies:
- apiVersion: gateway.envoyproxy.io/v1alpha1
  kind: BackendTrafficPolicy
  metadata:
    namespace: default
    name: policy-for-grcp-route
  spec:
    targetRef:
      group: gateway.networking.k8s.io
      kind: GRPCRoute
      name: grpcroute-1
    rateLimit:
      global:
        rules:
        - clientSelectors:
          - sourceCIDR:
              type: "Distinct"
              value: 192.168.0.0/16
          limit:
            requests: 20
            unit: Hour
      local:
        rules:
        - clientSelectors:
          - headers:
            - name: x-user-id
              value: one
            - name: x-org-id
              value: foo
          limit:
            requests: 10
            unit: Hour
